--- a/Zapoctak/Zapoctak.vcxproj
+++ b/Zapoctak/Zapoctak.vcxproj
@@ -115,6 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="LangProfile.h" />
+    <ClInclude Include="ProfileMatcher.h" />
+    <ClInclude Include="TextAnalyzer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="LangProfile.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="ProfileMatcher.cpp" />
+    <ClCompile Include="TextAnalyzer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
